# arm

./: .gitignore  .gitmodules  Makefile  README.md  arm.ino  camera_apriltags.py  control.py  deploy.py  deploy.sh  flat.py  ik.py  main.py  real.hpp  test_runner.sh  util.py  zero.py
old/: control.py  ik.py  util.py
src/: arm.cpp  arm.hpp  bringup.cpp  example-utils.hpp  kinematics.cpp  kinematics.hpp  main.cpp  vision.cpp  vision.hpp
tests/: transforms.cpp  vision.cpp
v2/: CMakeLists.txt  Makefile  README.md  install  thing.txt
v2/src/: arm.cpp  arm.hpp  bringup.cpp  copied-main.cpp  kinematics.cpp  kinematics.hpp  main.cpp  tags.cpp  tags.hpp  vision.cpp  vision.hpp
v2/tests/: transforms.cpp  vision.cpp
